@@ -3,6 +3,7 @@
 	also when it's an invalid regex.  This fixes Savannah bug #47440.
 	* src/search.c (search_init, do_replace): Don't bother setting the
 	current answer to the empty string, as do_prompt() can handle a NULL.
+	* src/browser.c (do_browser): Delete a snippet of dead code.
 
 2016-03-17  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (do_research): Use the Search key bindings also during
